<resources>
    <string name="app_name">我的应用</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="but_01">按钮1</string>
    <string name="hello_world_02">您好！！</string>
    <string name="lbl_telphone">手机号码：</string>
    <string name="please_input_telphone">请输入手机号码</string>
    <string name="lbl_message_code">短信验证码：</string>
    <string name="please_input_message_code">请输入验证码</string>
    <string name="button_send_message">发送短信</string>

    <string name="web_loading">正在加载...</string>
    <string name="web_load_success">加载成功</string>

    <string name="linear_layout_percent">LinearLayout百分比设计</string>
    <string name="relative_layout_percent">relativeLayout百分比设计</string>
    <string name="frame_layout_percent">frameLayout百分比设计</string>
</resources>
